--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<!--     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
   </head>
   <body>
     <div id="root"></div>
